[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/borders/border_e.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/fonts/small_test_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/chat.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderE" parent="." instance=ExtResource( 1 )]
margin_right = 585.0

[node name="Messages" type="Label" parent="."]
margin_left = 72.0
margin_top = 52.0
margin_right = 285.0
margin_bottom = 266.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.737255, 0.635294, 1 )
autowrap = true
max_lines_visible = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 72.0
margin_top = 290.0
margin_right = 285.0
margin_bottom = 337.0
theme = ExtResource( 2 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color_selected = Color( 0.85098, 0.909804, 0.8, 1 )
custom_colors/font_color = Color( 0.752941, 0.737255, 0.635294, 1 )
context_menu_enabled = false
placeholder_text = "message"
placeholder_alpha = 0.384
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
